[misc] fix header not showing in IG app browser

--- a/src/shared/components/common/header/header.scss
+++ b/src/shared/components/common/header/header.scss
@@ -363,7 +363,6 @@ header{
         padding: 5px;
         min-height: auto;
         position: sticky;
-        top: 0px;
         left: 0px;
         .container{
             padding: 0px !important;
