--- a/src/shared/public/stylesheets/common.scss
+++ b/src/shared/public/stylesheets/common.scss
@@ -86,13 +86,13 @@ body{
 html,body{
     width: 100%;
     height: 100%;
-    position: fixed;
     overflow: hidden;
 }
 
 #root{
     width: 100%;
     height: 100%;
+    height: 100vh;
     overflow-x: hidden;
     overflow-y: auto;
     -webkit-overflow-scrolling: touch;
